<resources>
    <string name="app_name">receipt</string>
    <string name="title_activity_receipt_list">Transactions</string>
    <string name="title_activity_receipt_detail">Transaction Details</string>
    <string name="mobileTransactionDetailsHeader">Transaction details</string>
    <string name="transactions">Transactions</string>
    <string name="mobileTransactionTypeLabel">TRANSACTION</string>
    <string name="mobileFeeInfoLabel">FEE INFO</string>
    <string name="amount">Amount</string>
    <string name="mobileFeeLabel">Fee</string>
    <string name="mobileTransactionDetailsTotal">Transaction total</string>
    <string name="mobileTransactionDetailsLabel">DETAILS</string>
    <string name="mobileJournalNumberLabel">Receipt ID</string>
    <string name="date">Date</string>
    <string name="mobileMerchantTxnLabel">Transaction ID</string>
    <string name="mobileConfirmNotesLabel">NOTE</string>
    <string name="mobileCharityName">Charity name</string>
    <string name="mobileCheckNumber">Check number</string>
    <string name="mobilePromoWebsite">Promo website</string>
    <string name="concat_date_string_view_format">%s %s</string>

    <string name="mobileNoTransactionsUser">There\'s no activity to display.</string>
    <string name="mobileNoTransactionsPrepaidCard">No transactions in the past 365 days</string>
    <string name="title_transfer_funds">Transfer</string>
    <string name="font_icon_placeholder">\ue908</string>
    <string name="text_placeholder">Placeholder</string>

    <!-- entry types -->
    <string name="debit" translatable="false">\ue908</string>
    <string name="credit" translatable="false">\ue907</string>
    <string name="debit_sign" translatable="false">-%s</string>
    <string name="credit_sign" translatable="false">%s%s</string>

    <!--Generic fee types-->
    <string name="unknown_type">Unknown Transaction Type</string>
    <string name="annual_fee">Annual Fee</string>
    <string name="annual_fee_refund">Annual Fee Refund</string>
    <string name="customer_service_fee">Customer Service Fee</string>
    <string name="customer_service_fee_refund">Customer Service Fee Refund</string>
    <string name="expedited_shipping_fee">Expedited Shipping Fee</string>
    <string name="generic_fee_refund">Generic Fee Refund</string>
...
    <string name="payment_expiration">Payment Expired</string>

    <!--Bank account-specific types-->
    <string name="bank_account_transfer_fee">Bank Account Return Fee</string>
    <string name="bank_account_transfer_return">Bank Account Return</string>
    <string name="bank_account_transfer_return_fee">Bank Account Return Fee</string>
    <string name="transfer_to_bank_account">Bank Account</string>

    <!--Card-specific types-->
    <string name="card_activation_fee">Card Activation Fee</string>
    <string name="card_activation_fee_waiver">Card Activation Fee Waiver</string>
    <string name="card_fee">Card Fee</string>
    <string name="manual_transfer_to_prepaid_card">Transfer to Card</string>
    <string name="prepaid_card_balance_inquiry_fee">Balance Inquiry Fee</string>
    <string name="prepaid_card_cash_advance">Cash Advance</string>
    <string name="prepaid_card_disputed_charge_refund">Disputed Charge Refund</string>
...
    <string name="prepaid_card_pin_change_fee">PIN Change Fee</string>
    <string name="prepaid_card_refund">Refund</string>
    <string name="prepaid_card_replacement_fee">Card Replacement Fee</string>
    <string name="prepaid_card_sale">Transaction</string>
    <string name="prepaid_card_sale_reversal">Reversed Transaction</string>
    <string name="prepaid_card_unload">Transfer from Card</string>
    <string name="transfer_to_prepaid_card">Transfer to Card</string>
    <!---->
    <!--Donation types-->
    <string name="donation">Donation</string>
    <string name="donation_fee">Donation Fee</string>
    <string name="donation_return">Donation Return</string>
    <!---->
...
    <!--User and program account types-->
    <string name="account_closure">Account Closure</string>
    <string name="account_closure_fee">Account Closure Fee</string>
    <string name="account_unload">Funds Return</string>
    <string name="dormant_user_fee">Dormant User Account Fee</string>
    <string name="dormant_user_fee_refund">Dormant User Account Fee Refund</string>
    <string name="payment">Payment</string>
    <string name="payment_cancellation">Payment Cancellation</string>
    <string name="payment_reversal">Payment Reversal</string>
    <string name="payment_reversal_fee">Payment Reversal Fee</string>
    <string name="payment_return">Payment Return</string>
    <string name="transfer_to_program_account">Transfer to Program</string>
    <string name="transfer_to_user">Transfer to User</string>
...
