...
                android:id="@+id/transaction_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/section_header_height"
                android:background="@drawable/item_view_border_header"
                android:paddingTop="@dimen/grid_padding_top">
                <TextView
                    android:id="@+id/transaction_header_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/grid_margin_left"
                    android:layout_marginTop="@dimen/grid_margin_top"
                    android:text="@string/transaction_header_text"
                    android:textAppearance="@style/TextAppearance.Hyperwallet.Body2"/>
...
                    android:id="@+id/fee_details_header"
                    android:layout_width="match_parent"
                    android:background="@drawable/item_view_border_header"
                    android:paddingTop="@dimen/grid_padding_top"
                    android:layout_height="@dimen/section_header_height">
                    <TextView
                        android:id="@+id/details_header_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/fee_details_header_text"
                        android:layout_marginStart="@dimen/grid_margin_left"
                        android:layout_marginTop="@dimen/grid_margin_top"
                        android:textAppearance="@style/TextAppearance.Hyperwallet.Body2"/>
...
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/fee_details_information"
                        android:background="@drawable/item_view_border"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView android:id="@+id/details_amount_label"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_marginStart="@dimen/grid_margin_left"
                                  android:layout_marginTop="@dimen/grid_margin_top"
                                  android:text="@string/details_amount_label"
                                  android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                                  app:layout_constraintLeft_toLeftOf="parent"
                                  app:layout_constraintStart_toStartOf="parent"
                                  app:layout_constraintTop_toTopOf="parent"/>

                        <TextView android:id="@+id/details_amount_value"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_marginTop="@dimen/grid_margin_top"
                                  android:layout_marginEnd="@dimen/grid_margin_right"
                                  android:text="@string/text_placeholder"
                                  android:textAppearance="@style/TextAppearance.Hyperwallet.Body2"
                                  app:layout_constraintEnd_toEndOf="parent"
                                  app:layout_constraintTop_toTopOf="parent"/>

                        <TextView android:id="@+id/details_fee_label"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_marginStart="@dimen/grid_margin_left"
                                  android:layout_marginTop="8dp"
                                  android:text="@string/fee_label"
                                  android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                                  app:layout_constraintLeft_toLeftOf="parent"
                                  app:layout_constraintStart_toStartOf="parent"
                                  app:layout_constraintTop_toBottomOf="@+id/details_amount_value"/>

                        <TextView android:id="@+id/details_fee_value"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_marginTop="@dimen/item_text_top_bottom_margin"
                                  android:layout_marginEnd="@dimen/grid_margin_right"
                                  android:text="@string/text_placeholder"
                                  android:textAppearance="@style/TextAppearance.Hyperwallet.Body2"
                                  app:layout_constraintEnd_toEndOf="parent"
                                  app:layout_constraintTop_toBottomOf="@+id/details_amount_value"/>

                        <TextView android:id="@+id/details_transfer_amount_label"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_marginStart="@dimen/grid_margin_left"
                                  android:layout_marginTop="@dimen/item_text_top_bottom_margin"
                                  android:text="@string/transfer_amount_label"
                                  android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                                  app:layout_constraintLeft_toLeftOf="parent"
                                  app:layout_constraintStart_toStartOf="parent"
                                  app:layout_constraintTop_toBottomOf="@+id/details_fee_value"/>

                        <TextView android:id="@+id/details_transfer_amount_value"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_marginTop="@dimen/item_text_top_bottom_margin"
                                  android:layout_marginEnd="@dimen/grid_margin_right"
                                  android:layout_marginBottom="@dimen/grid_margin_bottom"
                                  android:text="@string/text_placeholder"
...
