...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ListReceiptFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_receipts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ProgressBar
        android:id="@+id/list_receipt_progress_bar"
        style="?android:attr/progressBarStyle"
...
